--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,11 @@ x64/
 x86/
 build/
 bld/
+obj/
+bin/
 [Bb]in/
 [Oo]bj/
 msbuild.log
 msbuild.err
 msbuild.wrn
+ChatApp/.idea/.idea.ChatApp/.idea/vcs.xml
