--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,10 @@ build/
 bld/
 obj/
 bin/
-[Bb]in/
-[Oo]bj/
+*/[Bb]in/
+*/[Oo]bj/
 msbuild.log
 msbuild.err
 msbuild.wrn
 ChatApp/.idea/.idea.ChatApp/.idea/vcs.xml
+ChatApp/ChatApp/obj/Debug/net5.0/ChatApp.csprojAssemblyReference.cache
